--- a/index.html
+++ b/index.html
@@ -534,16 +534,36 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
 <br>
 	                    <li><b>Journal:</b><br>
                               <ol type="1" start = "2">
+                                <li>
+                                  Canhui Chen, Xu Chen, Jiangshan Yu,
+                                  Weigang Wu, Di Wu. <br><b> Impact of
+                                  Temporary Fork on the Evolution of
+                                  Mining Pools in Blockchain Networks:
+                                  An Evolutionary Game
+                                  Analysis. </b><br> <i>IEEE
+                                  Transactions on Network Science and
+                                  Engineering (<b> IEEE TNSE</b>).</i>2021.
+                                </li>
                                 <li> Lingjuan Lyu, Jiangshan Yu,
                                 Karthik Nandakumar, Yitong Li, Xingjun
                                 Ma, Jiong Jin, Han Yu, Kee Siong
-                                Ng. <br><b> <a href="https://arxiv.org/pdf/1906.01167.pdf">"Towards Fair and
-                                Privacy-Preserving Federated Deep
-                                Models"</a></b>. <br><i>IEEE Transactions
-                                on Parallel and Distributed
-                                Systems (<b>IEEE TPDS</b>).</i>
-                                2020.</li>
-                                
+                                Ng. <br><b> <a href="https://arxiv.org/pdf/1906.01167.pdf">"Towards
+                                Fair and Privacy-Preserving Federated
+                                Deep Models"</a></b>. <br><i>IEEE
+                                Transactions on Parallel and
+                                Distributed Systems (<b>IEEE
+                                TPDS</b>).</i>  2020.</li>
+                                <li>Lingjuan Lyu, Yitong Li, Karthik
+                                Nandakumar, Jiangshan Yu, Xingjun
+                                Ma. <br><b> “How to Democratise and Protect
+                                AI: Fair and Differentially Private
+                                    Decentralised Deep Learning”</b>, <br><i>IEEE
+                                Trans. on Dependable and Secure
+                                    Computing (<b>IEEE TDSC</b>).</i> 2020.</li>
+                                <li>Wei Zhang, JiangshanYu, Qingqiang
+                                He, Nan Zhang, Nan Guan. <br><b> “TICK: Tiny
+                                    Client for Blockchains”</b>, <br>IEEE Internet
+                                  of Things Journal (<b>IOT-J</b>). 2020.</li>
                                 <li>
                                   Jiangshan Yu, David Kozhaya, Jeremie
                                   Decouchant, and Paulo
@@ -567,6 +587,13 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                                   code</a>)
                                 </li>
 
+                                <li>Diego Kreutz, Jiangshan Yu, Paulo
+                                Jorge Esteves Veríssimo, Catia
+                                Magalhaes, Fernando M. V. Ramos.<br><b> “The
+                                KISS Principle in Software-Defined
+                                Networking: A Framework for Secure
+                                    Communications”.</b> <br><i>IEEE Security &
+                                    Privacy, </i>2018.</li>
                                 <li>
                                   Jiangshan Yu, Mark Ryan, and Cas
                                   Cremers. <br><b><a href="http://eprint.iacr.org/2015/486.pdf">"DECIM:
@@ -596,23 +623,75 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
 
 	                    <li><b>Conference:</b><br>
                               <ol type="1" start = "7">
-                                <li>Tong Cao, Jiangshan Yu, Jeremie
+                                <li>Liang Yuan, Qiang He, Siyu Tan, Bo
+                                Li, Jiangshan Yu, Feifei Chen, Hai
+                                Jin, and Yun Yang. <br><b>"CoopEdge: A
+                                Decentralized Blockchain-based
+                                Platform for Cooperative Edge
+                                    Computing"</b>, <br><i>The Web Conference
+                                    (<b>WWW</b>)</i>, 2021.
+                                <li> Arash Mirzaei, Amin Sakzad,
+                                Jiangshan Yu, Ron Steinfeld. <br> <b>"FPPW: A
+                                Fair and Privacy Preserving Watchtower
+                                    For Bitcoin"</b>. <br><i>The 25th Financial
+                                Cryptography and Data Security (<b>FC</b>)</i>,
+                                  2021.</li>
+
+                                <li>Runchao Han, Zhimei Sui, Jiangshan
+                                Yu, Joseph Liu, and Shiping
+                                Chen. <br><b>"Fact and Fiction: Challenging
+                                the Honest Majority Assumption of
+                                    Permissionless Blockchains"</b>. <br><i>The 16th
+                                ACM ASIA Conference on Computer and
+                                Communications Security (<b>ASIACCS</b>),</i>
+                                  2021.</li>
+                                <li>
+                                  Ermyas Abebe, Yining Hu, Allison
+                                  Irvin, Dileban Karunamoorthy,
+                                  Vinayaka Pandit, Venkatraman
+                                  Ramakrishna, Jiangshan
+                                  Yu. <br> <b>"Verifiable Observation of
+                                    Permissioned Ledgers"</b>, <br><i>IEEE
+                                  International Conference on
+                                  Blockchain and Cryptocurrency
+                                    (<b>ICBC</b>), </i>2021.
+                                </li>
+                                <li>Joao Otavio Chervinski, Diego
+                                Kreutz, Jiangshan Yu. <br><b>"Analysis of
+                                transaction flooding attacks against
+                                Monero"</b>, <br><i>IEEE International
+                                Conference on Blockchain and
+                                Cryptocurrency
+                                (<b>ICBC</b>), </i>2021.
+                                </li>
+                                <li>>Sina Aeeneh, Joao Otavio
+                                Chervinski, Jiangshan Yu, Nikola
+                                Zlatanov. <br><b>"New Attacks on the
+                                Untraceability of Transactions in
+                                CryptoNote-Style
+                                Blockchains"</b>, <br><i>IEEE
+                                International Conference on Blockchain
+                                and Cryptocurrency
+                                (<b>ICBC</b>), </i>2021.
+                                </li>
+
+                                  <li>Tong Cao, Jiangshan Yu, Jeremie
                                   Decouchant, Xiapu Luo, Paulo
                                   Verissimo.<br> <b>Exploring the
                                   Monero Peer-to-Peer
                                   Network</b> <br><i>Financial
                                   Cryptography and Data Security
-                                  (<b>FC</b>) 2020.</i></li>
+                                  (<b>FC</b>) </i>2020.</li>
                                 <li>Qin WANG, Jiangshan YU, Zhiniang Peng,
                           Vancuong Bui, Shiping Chen, Yong Ding, Yang
                           Xiang.<br> <b> Security Analysis on dBFT
                           protocol of NEO</b> <br><i>Financial
-                          Cryptography and Data Security (<b>FC</b>)
-                                    2020.</i></li>
+                                    Cryptography and Data Security (<b>FC</b>)</i>
+                                    2020.</li>
                            <li>
                           Jiangshan Yu, Man Ho Allen Au, and Paulo
                           Veríssimo.<br> <b><a href="https://eprint.iacr.org/2019/186.pdf">Re-thinking untraceability in the
-                          CryptoNote-style blockchain.</a></b> <br><i>IEEE Computer Security Foundations Symposium (<b>CSF</b>) 2019.</i>
+                          CryptoNote-style blockchain.</a></b> <br><i>IEEE Computer Security Foundations Symposium (<b>CSF</b>)</i> 2019.
                            </li>
                           <li>
                             Zuoxia Yu, Man Ho Au, Jiangshan Yu, Rupeng
@@ -622,13 +701,13 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                             CryptoNote-Style
                             Blockchains"</a></b>. <br> <i> Financial
                             Cryptography and Data Security
-                            (<b>FC</b>) 2019.</i>
+                            (<b>FC</b>) </i>2019.
                           </li>
                           <li>
                           Dimaz Ankaa Wijaya, Joseph Liu, Ron
                           Steinfeld, Dongxi Liu, Jiangshan
                           Yu.<br> <b>"On The Unforkability of
-                          Monero"</b>. <br><i>ACM  Asia Conference on Information, Computer and Communications Security (<b>ASIACCS</b>) 2019.</i>
+                          Monero"</b>. <br><i>ACM  Asia Conference on Information, Computer and Communications Security (<b>ASIACCS</b>)</i> 2019.
                           </li>
                            <li>
                              Jérémie Decouchant, Antoine Boutet, Jiangshan Yu and Paulo Verissimo<br>
@@ -637,22 +716,21 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                                Practical Privacy-Preserving Live
                                Streaming.</a></b> <br><i>The 38th IEEE
                                International Symposium on Reliable
-                               Distributed Systems (<b>SRDS</b>) 2019.</i>
+                               Distributed Systems (<b>SRDS</b>)</i> 2019
                            </li>
                               <li>
                             Runchao Han, Haoyu Lin, and Jiangshan
                             Yu. <br> <b> <a href="https://eprint.iacr.org/2019/896.pdf">"On the optionality and
                             fairness of Atomic
                             Swaps"</a></b>, <br> <i>ACM Advances in Financial Technology (<b>AFT</b>)
-                            2019.</i>
+                            </i>2019.
                               </li>
                           <li>
                             Kevin Milner, Cas Cremers, Jiangshan Yu, and
                             Mark Ryan. <br> <a href="http://eprint.iacr.org/2017/234.pdf"><b>"Automatically
                             Detecting the Misuse of Secrets:
                             Foundations, Design Principles, and
-                            Applications"</b></a>. <br> <i> IEEE <b>CSF</b> 2017.
-                            </i>
+                                Applications"</b></a>. <br> <i> IEEE <b>CSF</b> </i>2017.
                           </li>
                               </ol>
 
