--- a/index.html
+++ b/index.html
@@ -92,13 +92,13 @@ http://www.templatemo.com/tm-395-urbanic
                                alt="icon"> <br><br><br><br>
                           <div style="width: 310px; height:
                                       230px;">
-                            <b>Prospective PhD Students:</b><br><br>
-                            <font style="color:red"><b>Two fully funded PhD positions are available!</b></font> <br>
-                            My life would be happier if I found very
-                            good PhD students to work with. If this is
-                            you, do apply! <br> <a href="doc/phd_position.html">More info.</a>
+                            <!-- <b>Prospective PhD Students:</b><br><br> -->
+                            <!-- <font style="color:red"><b>Two fully funded PhD positions are available!</b></font> <br> -->
+                            <!-- My life would be happier if I found very -->
+                            <!-- good PhD students to work with. If this is -->
+                            <!-- you, do apply! <br> <a href="doc/phd_position.html">More info.</a> -->
 
-                            <br><br>
+                            <!-- <br><br> -->
 
                             <!-- <b>A list of projects for Honours and/or Master Thesis is <a href="doc/projects.pdf">here</a>.</b><br><br> -->
                             <b>
@@ -860,14 +860,15 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
           <ol type="circle">
 	    <li>Tong Cao (Feb.2018-), University of Luxembourg. (Co-supervised with Prof. Paulo Verissimo)</li>
             <li>Runchao Han (Feb.2019-), Monash University. </li>
-            <li>Arash Mirzaei (July.2019-), Monash University. (Co-supervised with Amin Sakzad)</li>
+            <li>Arash Mirzaei (July 2019-), Monash University. (Co-supervised with Amin Sakzad)</li>
 	    <li>Joao Otavio Massari Chervinski (Oct.2019-), Monash University.</li>
 	    <!-- <li>Liangrong Zhao (Exp. Nov.2019-), Monash University.</li> -->
 	    <li>Shange Fu (Oct.2019-), Monash University.</li>
             <li>Zhimei Sui (Nov.2019-), Monash University.</li>
             <li>Chaochen Shi (Jan.2020-), Deakin University. (Co-supervised with Prof. Yong Xiang)</li>
-            <li>Sina Aeeneh (July.2020-), Monash University. (Faculty of Engineering, Co-supervised with Nikola Zlatanov)</li>
-            <li>Liangrong Zhao (Mar.2021-), Monash University.</li>
+            <li>Sina Aeeneh (July 2020-), Monash University. (Faculty of Engineering, Co-supervised with Nikola Zlatanov)</li>
+            <li>Liangrong Zhao (March 2021-), Monash University.</li>
+            <li>Yuanzhe Zhang (June 2021-), Monash University.</li>
           </ol></font>
 <br>
           <font size="5"><b>Visitors:</b></font><br><br>
