--- a/index.html
+++ b/index.html
@@ -161,6 +161,12 @@ http://www.templatemo.com/tm-395-urbanic
                     <div class="col-lg-offset-5 JYuinfo_right">
                       <ul style="margin-bottom:6px">
                         <div style="height:9cm; overflow:auto">
+                          <li> <b> [2021-06]</b> Our work on
+                            "Characterizing the Impact of Network
+                            Delay on Bitcoin Mining" has been accepted
+                            by The 40th International Symposium on
+                            Reliable Distributed Systems <b> (SRDS'21)
+                            </b>.</li>
                           <li> <b> [2021-06]</b> I'm delighted to
                               serve as a PC member for <b>DSN'22</b>.</li>
                           <li> <b> [2021-03]</b> I'm delighted to
@@ -1196,6 +1202,7 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                                 Computing and
                                 Communications <b>(TrustCom)</b> </li>
                               <li> The 17th International Conference on Mobility, Sensing and Networking <b>(MSN)</b></li>
+                              <li>The 15th International Conference on Network and System Security <b>(NSS)</b></li>
                             </ul>
                               <b>2020</b>
                               <ul type="circle">
@@ -1223,7 +1230,7 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                               <li>
                                 The 25th Australasian Conference on Information Security and Privacy <b>(ACISP)</b>
                               </li>
-                              <li>The 15th International Conference on Network and System Security <b>(NSS)</b></li>
+                              <li>The 14th International Conference on Network and System Security <b>(NSS)</b></li>
 
                             </ul>
                             <b>2019</b>
