--- a/index.html
+++ b/index.html
@@ -449,7 +449,9 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                           (<a href="https://fc20.ifca.ai/preproceedings/32.pdf">
                           FC'20'</a>) and <b>CryptoNote-style
                           blockchains</b>
-                          (<a href="https://fc20.ifca.ai/preproceedings/43.pdf">FC'20</a>, <a href="https://eprint.iacr.org/2019/186">
+                          (2*ICBC'21, <a href="https://fc20.ifca.ai/preproceedings/43.pdf">
+                          FC'20
+                          </a>, <a href="https://eprint.iacr.org/2019/186">
                           CSF'19
                           </a>, <a href="http://fc19.ifca.ai/preproceedings/69-preproceedings.pdf"> FC'19
                           </a>, and AsiaCCS'19). For the NEO
