--- a/index.html
+++ b/index.html
@@ -1155,6 +1155,7 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                             <ul type="circle">
                               <li> Publicity Co-Chair, IEEE Blockchain 2021.</li>
                               <li> Publicity Co-Chair, IEEE GreenCom 2021.</li>
+                              <li> Publicity Co-Chair, EAI BlockTEA 2021.</li>
                               <li> Publication Chair, ProvSec 2019.</li>
                               <li> PC Co-Chair,
                                 <a href="http://webhost.laas.fr/TSF/IFIPWG/Workshops&Meetings/74/index.htm">74th Meeting of the IFIP WG
