--- a/index.html
+++ b/index.html
@@ -161,12 +161,17 @@ http://www.templatemo.com/tm-395-urbanic
                     <div class="col-lg-offset-5 JYuinfo_right">
                       <ul style="margin-bottom:6px">
                         <div style="height:9cm; overflow:auto">
+                          <li> <b> [2021-09]</b> Our work on "General
+                            Congestion Attack on HTLC-Based Payment
+                            Channel Networks" has been accepted by
+                             <b> Tokenomics2021</b>. Congrats to
+                             Zhichun and Runchao! </li>
                           <li> <b> [2021-06]</b> Our work on
                             "Characterizing the Impact of Network
                             Delay on Bitcoin Mining" has been accepted
                             by The 40th International Symposium on
                             Reliable Distributed Systems <b> (SRDS'21)
-                            </b>.</li>
+                            </b>. </li>
                           <li> <b> [2021-06]</b> I'm delighted to
                               serve as a PC member for <b>DSN'22</b>.</li>
                           <li> <b> [2021-03]</b> I'm delighted to
