--- a/index.html
+++ b/index.html
@@ -646,15 +646,22 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                                 <li> Arash Mirzaei, Amin Sakzad,
                                 Jiangshan Yu, Ron Steinfeld. <br> <b>"FPPW: A
                                 Fair and Privacy Preserving Watchtower
-                                    For Bitcoin"</b>. <br><i>The 25th Financial
+                                    For Bitcoin"</b>, <br><i>The 25th Financial
                                 Cryptography and Data Security (<b>FC</b>)</i>,
                                   2021.</li>
-
+                                <li> Tong Cao, Jeremie Decouchant,
+                                Jiangshan Yu, Paulo
+                                Esteves-Verissimo. <br><b>“Characterizing
+                                the Impact of Network Delay on Bitcoin
+                                Mining” </b>, <br><i> The 40th
+                                International Symposium on Reliable
+                                Distributed Systems
+                                (<b>SRDS</b>), </i>2021.</li>
                                 <li>Runchao Han, Zhimei Sui, Jiangshan
                                 Yu, Joseph Liu, and Shiping
                                 Chen. <br><b>"Fact and Fiction: Challenging
                                 the Honest Majority Assumption of
-                                    Permissionless Blockchains"</b>. <br><i>The 16th
+                                    Permissionless Blockchains"</b>, <br><i>The 16th
                                 ACM ASIA Conference on Computer and
                                 Communications Security (<b>ASIACCS</b>),</i>
                                   2021.</li>
@@ -688,23 +695,44 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                                 (<b>ICBC</b>), </i>2021.
                                 </li>
 
+                                <li>
+                                  Zhichun Lu, Runchao Han, Jiangshan
+                                  Yu. <br> <b>"General Congestion
+                                  Attack on HTLC-Based Payment Channel
+                                  Networks"</b>, <br><i>The 3rd
+                                  International Conference on
+                                  Blockchain Economics, Security and
+                                  Protocols (<b>Tokenomics</b>)</i>
+                                  2021.
+                                </li>
+                                <li> Shange Fu, Jiangshan Yu, Rafael
+                                Dowsley, Joseph K. Liu. <br> <b> "On
+                                the Shutdown Price of Blockchain
+                                Mining Machines"</b>, <br><i> IEEE
+                                Blockchain</i> 2021.</li>
+                                <li> Van Cuong Bui, Sheng Wen,
+                                Jiangshan Yu, Yang Xiang, Mohammad
+                                Sayad Haghighi<br> <b> "Evaluating
+                                Upgradable Smart
+                                Contract"</b>, <br><i> IEEE
+                                Blockchain</i> 2021.</li>
                                   <li>Tong Cao, Jiangshan Yu, Jeremie
                                   Decouchant, Xiapu Luo, Paulo
                                   Verissimo.<br> <b>Exploring the
                                   Monero Peer-to-Peer
-                                  Network</b> <br><i>Financial
+                                  Network</b>, <br><i>Financial
                                   Cryptography and Data Security
                                   (<b>FC</b>) </i>2020.</li>
                                 <li>Qin WANG, Jiangshan YU, Zhiniang Peng,
                           Vancuong Bui, Shiping Chen, Yong Ding, Yang
                           Xiang.<br> <b> Security Analysis on dBFT
-                          protocol of NEO</b> <br><i>Financial
+                          protocol of NEO</b>, <br><i>Financial
                                     Cryptography and Data Security (<b>FC</b>)</i>
                                     2020.</li>
                            <li>
                           Jiangshan Yu, Man Ho Allen Au, and Paulo
                           Veríssimo.<br> <b><a href="https://eprint.iacr.org/2019/186.pdf">Re-thinking untraceability in the
-                          CryptoNote-style blockchain.</a></b> <br><i>IEEE Computer Security Foundations Symposium (<b>CSF</b>)</i> 2019.
+                          CryptoNote-style blockchain</a></b>, <br><i>IEEE Computer Security Foundations Symposium (<b>CSF</b>)</i> 2019.
                            </li>
                           <li>
                             Zuoxia Yu, Man Ho Au, Jiangshan Yu, Rupeng
@@ -712,7 +740,7 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                             Lau. <br> <b><a href="http://fc19.ifca.ai/preproceedings/69-preproceedings.pdf">"New
                             Empirical Traceability Analysis of
                             CryptoNote-Style
-                            Blockchains"</a></b>. <br> <i> Financial
+                            Blockchains"</a></b>, <br> <i> Financial
                             Cryptography and Data Security
                             (<b>FC</b>) </i>2019.
                           </li>
@@ -720,14 +748,14 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                           Dimaz Ankaa Wijaya, Joseph Liu, Ron
                           Steinfeld, Dongxi Liu, Jiangshan
                           Yu.<br> <b>"On The Unforkability of
-                          Monero"</b>. <br><i>ACM  Asia Conference on Information, Computer and Communications Security (<b>ASIACCS</b>)</i> 2019.
+                          Monero"</b>, <br><i>ACM  Asia Conference on Information, Computer and Communications Security (<b>ASIACCS</b>)</i> 2019.
                           </li>
                            <li>
                              Jérémie Decouchant, Antoine Boutet, Jiangshan Yu and Paulo Verissimo<br>
                              <b>
                                P3LS: Plausible Deniability for
                                Practical Privacy-Preserving Live
-                               Streaming.</a></b> <br><i>The 38th IEEE
+                               Streaming</a></b>, <br><i>The 38th IEEE
                                International Symposium on Reliable
                                Distributed Systems (<b>SRDS</b>)</i> 2019
                            </li>
@@ -743,7 +771,7 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                             Mark Ryan. <br> <a href="http://eprint.iacr.org/2017/234.pdf"><b>"Automatically
                             Detecting the Misuse of Secrets:
                             Foundations, Design Principles, and
-                                Applications"</b></a>. <br> <i> IEEE <b>CSF</b> </i>2017.
+                                Applications"</b></a>, <br> <i> IEEE <b>CSF</b> </i>2017.
                           </li>
                               </ol>
 
@@ -764,7 +792,7 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                                 <li>Jiangshan
                           Yu.<br> <a href="doc/paper/Thesis.pdf"><b>"Remote
                           User Authentication in Distributed Networks
-                          and Systems"</a></b>. <br><i><b>Master of Research (MPhil)</b> in Computer Science
+                          and Systems"</a></b>, <br><i><b>Master of Research (MPhil)</b> in Computer Science
                           (Network security and Cryptography)</i>.<br>  University of
                           Wollongong, Australia, 2012. (Supervised
                           by <a href="https://scholar.google.co.uk/citations?user=QFDtSBIAAAAJ&hl=en">Dr. Guilin
