--- a/index.html
+++ b/index.html
@@ -959,14 +959,33 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                 <ul type="circle">
                   <li>
                     (Sole CI). A Scalable and Adaptive-Resilient
-                    Blockchain, AU$563,000 (AU$408,000 from ARC and
-                    AU$155,000 from Monash University), ARC DECRA,
-                    2021-2023.
+                    Blockchain, AU$563,000, ARC DECRA, 2021-2023.
+                  </li>
+                  <li>(Co-CI-- 4 CIs in total). De-tangling the
+                  blockchain: Solutions and barriers in
+                  AgriFutures-levied small and emerging industries,
+                  AU$184,625 from AgriFutures
+                  Australia. 2021-2022.</li>
+                  <li>
+                    (Co-CI-- 2 CIs in total). To Develop a Sustainable
+                    and Green Blockchain Consensus, AU$500,625,
+                    contract research. 2021-2022.
+                  </li>
+                  <li>
+                    (Co-CI-- 3 CIs in total). A trustworthy
+                    blockchain-based credentialing system, AU$50,000,
+                    contract research. 2021-2022.
+                  </li>
+                  <li>
+                    (Co-CI-- 3 CIs in total). Exploring
+                    blockchain-based approach for auditability in
+                    pharmaceutical supply chain, AU$75,000, contract
+                    research. 2021-2022.
                   </li>
 	          <li> (Co-CI -- 34 CIs in total). Reliable Affordable
                   Clean Energy for 2030, AU$349,000,000, the 21st
                   round of the Cooperative Research Centre (CRC)
-                  program. 07.2020-06.2031.
+                  program. 2020-2031.
                   </li>
                   <li>
                     (Sole CI). Interoperability Across Distributed
