--- a/index.html
+++ b/index.html
@@ -161,6 +161,12 @@ http://www.templatemo.com/tm-395-urbanic
                     <div class="col-lg-offset-5 JYuinfo_right">
                       <ul style="margin-bottom:6px">
                         <div style="height:9cm; overflow:auto">
+                          <li> <b> [2021-10]</b> Congrats Shange for
+                            receiving <b> Best Paper Award
+                            </b>
+                            at <b> Blockchain'21
+                            </b> on her work !</li>
+
                           <li> <b> [2021-09]</b> Our work on "General
                             Congestion Attack on HTLC-Based Payment
                             Channel Networks" has been accepted by
@@ -708,14 +714,14 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                                 <li> Shange Fu, Jiangshan Yu, Rafael
                                 Dowsley, Joseph K. Liu. <br> <b> "On
                                 the Shutdown Price of Blockchain
-                                Mining Machines"</b>, <br><i> IEEE
-                                Blockchain</i> 2021.</li>
+                                Mining Machines"</b> <b>(Best Paper Award)</b>, <br><b><i> IEEE
+                                Blockchain</i></b> 2021. </li>
                                 <li> Van Cuong Bui, Sheng Wen,
                                 Jiangshan Yu, Yang Xiang, Mohammad
                                 Sayad Haghighi<br> <b> "Evaluating
                                 Upgradable Smart
-                                Contract"</b>, <br><i> IEEE
-                                Blockchain</i> 2021.</li>
+                                Contract"</b>, <br><b><i> IEEE
+                                Blockchain</i></b> 2021.</li>
                                   <li>Tong Cao, Jiangshan Yu, Jeremie
                                   Decouchant, Xiapu Luo, Paulo
                                   Verissimo.<br> <b>Exploring the
