--- a/index.html
+++ b/index.html
@@ -1237,7 +1237,8 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                               <li>
                                 The 4th IEEE International Conference on Blockchain and Cryptocurrency <b>(ICBC)</b>
                               </li>
-
+                              <!-- <li>IEEE ICBC Crosschain Workshop <b>(CROSS)</b></li> -->
+                              <!-- <li>Australasian Symposium on Parallel and Distributed Computing <b>(AusPDC)</b></li> -->
                             </ul>
                             <b>2021</b>
                             <ul type="circle">
@@ -1268,6 +1269,11 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                               <li> The 17th International Conference on Mobility, Sensing and Networking <b>(MSN)</b></li>
                               <li> The 4th IEEE International Conference on Blockchain <b>(Blockchain)</b></li>
                               <li>The 15th International Conference on Network and System Security <b>(NSS)</b></li>
+                              <li>
+                                EAI International Conference on
+                                Blockchain Technology and Emerging
+                                Applications <b>(BlockTEA)</b>
+                              </li>
                             </ul>
                               <b>2020</b>
                               <ul type="circle">
