--- a/index.html
+++ b/index.html
@@ -161,6 +161,11 @@ http://www.templatemo.com/tm-395-urbanic
                     <div class="col-lg-offset-5 JYuinfo_right">
                       <ul style="margin-bottom:6px">
                         <div style="height:9cm; overflow:auto">
+                          <li> <b> [2021-12]</b> Our work "A
+                            Bytecode-based Approach for Smart Contract
+                            Classification" has been accepted by
+                            <b>SANER'22</b>. Congrats Chaochen!</li>
+
                           <li> <b> [2021-10]</b> Congrats Shange for
                             receiving <b> Best Paper Award
                             </b>
@@ -642,6 +647,15 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
 
 	                    <li><b>Conference:</b><br>
                               <ol type="1" start = "11">
+                                <li> Chaochen Shi, Yong Xiang,
+                                Jiangshan Yu, Longxiang Gao, Keshav
+                                Sood, and Robin Doss. <br> <b>"A
+                                Bytecode-based Approach for Smart
+                                Contract Classification"</b>, <br><i>
+                                The 29th IEEE International Conference
+                                on Software Analysis, Evolution and
+                                Reengineering (<b>SANER</b>)</i>,
+                                2022.</li>
                                 <li>Liang Yuan, Qiang He, Siyu Tan, Bo
                                 Li, Jiangshan Yu, Feifei Chen, Hai
                                 Jin, and Yun Yang. <br><b>"CoopEdge: A
