--- a/index.html
+++ b/index.html
@@ -923,13 +923,15 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
             <li>Runchao Han (Feb.2019-), Monash University. </li>
             <li>Arash Mirzaei (July 2019-), Monash University. (Co-supervised with Amin Sakzad)</li>
 	    <li>Joao Otavio Massari Chervinski (Oct.2019-), Monash University.</li>
-	    <!-- <li>Liangrong Zhao (Exp. Nov.2019-), Monash University.</li> -->
 	    <li>Shange Fu (Oct.2019-), Monash University.</li>
             <li>Zhimei Sui (Nov.2019-), Monash University.</li>
             <li>Chaochen Shi (Jan.2020-), Deakin University. (Co-supervised with Prof. Yong Xiang)</li>
             <li>Sina Aeeneh (July 2020-), Monash University. (Faculty of Engineering, Co-supervised with Nikola Zlatanov)</li>
             <li>Liangrong Zhao (March 2021-), Monash University.</li>
             <li>Yuanzhe Zhang (June 2021-), Monash University.</li>
+            <li>Peter Ince (Aug. 2021-), Monash University. (Co-supervised with Joseph Liu)</li>
+            <li>Zoey Ziyi Li (Oct. 2021-), Monash University. (Co-supervised with Joseph Liu)</li>
+            <li>Hans Schmiedel (Nov. 2021-), Monash University.</li>
           </ol></font>
 <br>
           <font size="5"><b>Visitors:</b></font><br><br>
